; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zcp_iter.c_zcp_holds_list.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zcp_iter.c_zcp_holds_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_6__ = type { i32* }

@FTAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"%s is not a snapshot\00", align 1
@zcp_holds_iter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @zcp_holds_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zcp_holds_list(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i8* @lua_tostring(i32* %10, i32 1)
  store i8* %11, i8** %4, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call %struct.TYPE_6__* @zcp_run_info(i32* %12)
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = load i32, i32* @FTAG, align 4
  %20 = call %struct.TYPE_5__* @zcp_dataset_hold(i32* %16, i32* %17, i8* %18, i32 %19)
  store %struct.TYPE_5__* %20, %struct.TYPE_5__** %6, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %22 = icmp eq %struct.TYPE_5__* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %49

24:                                               ; preds = %1
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %7, align 4
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  store i32 %30, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %32 = load i32, i32* @FTAG, align 4
  %33 = call i32 @dsl_dataset_rele(%struct.TYPE_5__* %31, i32 %32)
  %34 = load i32, i32* %7, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %40, label %36

36:                                               ; preds = %24
  %37 = load i32*, i32** %3, align 8
  %38 = load i8*, i8** %4, align 8
  %39 = call i32 @zcp_argerror(i32* %37, i32 1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %38)
  store i32 %39, i32* %2, align 4
  br label %49

40:                                               ; preds = %24
  %41 = load i32*, i32** %3, align 8
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @lua_pushnumber(i32* %41, i32 %42)
  %44 = load i32*, i32** %3, align 8
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @lua_pushnumber(i32* %44, i32 %45)
  %47 = load i32*, i32** %3, align 8
  %48 = call i32 @lua_pushcclosure(i32* %47, i32* @zcp_holds_iter, i32 2)
  store i32 1, i32* %2, align 4
  br label %49

49:                                               ; preds = %40, %36, %23
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i8* @lua_tostring(i32*, i32) #1

declare dso_local %struct.TYPE_6__* @zcp_run_info(i32*) #1

declare dso_local %struct.TYPE_5__* @zcp_dataset_hold(i32*, i32*, i8*, i32) #1

declare dso_local i32 @dsl_dataset_rele(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @zcp_argerror(i32*, i32, i8*, i8*) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1

declare dso_local i32 @lua_pushcclosure(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
